--- a/app/assets/stylesheets/briarcliff/_cover.scss
+++ b/app/assets/stylesheets/briarcliff/_cover.scss
@@ -30,9 +30,6 @@
         padding: .8em;
       }
     }
-    li > a {
-      line-height: 1.8em;
-    }
   }
 }
 
